--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,3 +1,3 @@
-mysql.url=jdbc:mysql://10.3.2.33:3306/anticrawler?useUnicode=true&characterEncoding=UTF-8
-mysql.username=hlzou
+mysql.url=jdbc:mysql://localhost:3306/factoryAirMonitor?useUnicode=true&characterEncoding=UTF-8
+mysql.username=root
 mysql.password=zhl123456
