--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,3 +1,3 @@
 mysql.url=jdbc:mysql://localhost:3306/factoryairmonitor?useUnicode=true&characterEncoding=UTF-8
-mysql.username=hlzou
+mysql.username=root
 mysql.password=zhl123456
