code deploy to server

--- a/src/main/resources/properties/jdbc.properties
+++ b/src/main/resources/properties/jdbc.properties
@@ -1,3 +1,3 @@
-mysql.url=jdbc:mysql://localhost:3306/factoryairmonitor?useUnicode=true&characterEncoding=UTF-8
-mysql.username=root
-mysql.password=zhl123456
+mysql.url=jdbc:mysql://47.96.185.51:13306/factoryairmonitor?useUnicode=true&characterEncoding=UTF-8
+mysql.username=daben
+mysql.password=hyt131216
